fix: make breadcrumbs in chooser clickable again
The div to place the alerts affixed to the top was (transparently)
covering the breadcrumbs making it impossible to reach.

--- a/clj/src/slipstream/ui/views/css/topbar.css
+++ b/clj/src/slipstream/ui/views/css/topbar.css
@@ -42,6 +42,12 @@ html{
   height: 50px;
 }
 
+.ss-page-type-chooser .ss-alert-offset-placeholder,
+.ss-page-type-chooser .ss-alert-container-fixed-top {
+  height: 0;
+  min-height: 0;
+}
+
 
 /* Dev page decorations */
 
